created basic layout and flexbox

--- a/index.html
+++ b/index.html
@@ -14,5 +14,45 @@
   </head>
   <body>
     <p>Fuchsjobs</p>
+    <div class="flex-container">
+      <div>
+        <h3>Fuchsjobs.de</h3>
+        <p>
+          Finde einen Job, der genau zu Dir passt. Oder finden Sie qualifizierte
+          Talente für Ihr Unternehmen.
+        </p>
+      </div>
+      <div>
+        <h3>Unternehmen</h3>
+        <p>Über Fuchsjobs</p>
+        <p>Häufige Fragen</p>
+        <p>Kontakt</p>
+      </div>
+      <div>
+        <h3>Arbeitnehmer</h3>
+        <p>Für Jobsuchende</p>
+        <p>Übersicht Jobs</p>
+        <p>Blog</p>
+      </div>
+      <div>
+        <h3>Arbeitgeber</h3>
+        <p>Für Arbeitgeber</p>
+        <p>Job posten</p>
+        <p>Preise</p>
+      </div>
+      <div>
+        <h3>Social</h3>
+        <p>Facebook</p>
+        <p>Instagram</p>
+        <p>LinkedIn</p>
+        <p>Youtube</p>
+        <h3>Rechtliches</h3>
+        <p>Datenschutz</p>
+        <p>Impressum</p>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>2023 Fuchsjobs. Made with 🦊 in Berlin & UK</p>
+    </div>
   </body>
 </html>
