changed some text sizes

--- a/index.html
+++ b/index.html
@@ -13,46 +13,49 @@
     <title>Footer</title>
   </head>
   <body>
-    <p>Fuchsjobs</p>
     <div class="flex-container">
-      <div>
+      <div class="box-1">
         <h3>Fuchsjobs.de</h3>
         <p>
           Finde einen Job, der genau zu Dir passt. Oder finden Sie qualifizierte
           Talente für Ihr Unternehmen.
         </p>
+        <p>Phone: (+49) 30 754 79 856 📞</p>
+        <p>Email: info@fuchsjobs.de @</p>
       </div>
       <div>
         <h3>Unternehmen</h3>
-        <p>Über Fuchsjobs</p>
-        <p>Häufige Fragen</p>
-        <p>Kontakt</p>
+        <p><a href="#">Über Fuchsjobs</a></p>
+        <p><a href="#">Häufige Fragen</a></p>
+        <p><a href="#">Kontakt</a></p>
+        <p>Phone: (+49) 30 754 79 856 📞</p>
       </div>
       <div>
         <h3>Arbeitnehmer</h3>
-        <p>Für Jobsuchende</p>
-        <p>Übersicht Jobs</p>
-        <p>Blog</p>
+        <p><a href="#">Für Jobsuchende</a></p>
+        <p><a href="#">Übersicht Jobs</a></p>
+        <p><a href="#">Blog</a></p>
       </div>
       <div>
         <h3>Arbeitgeber</h3>
-        <p>Für Arbeitgeber</p>
-        <p>Job posten</p>
-        <p>Preise</p>
+        <p><a href="#">Für Arbeitgeber</a></p>
+        <p><a href="#">Job posten</a></p>
+        <p><a href="#">Preise</a></p>
       </div>
       <div>
         <h3>Social</h3>
-        <p>Facebook</p>
-        <p>Instagram</p>
-        <p>LinkedIn</p>
-        <p>Youtube</p>
+        <p><a href="#">Facebook</a></p>
+        <p><a href="#">Instagram</a></p>
+        <p><a href="#">LinkedIn</a></p>
+        <p><a href="#">Youtube</a></p>
         <h3>Rechtliches</h3>
-        <p>Datenschutz</p>
-        <p>Impressum</p>
+        <p><a href="#">Datenschutz</a></p>
+        <p><a href="#">Impressum</a></p>
       </div>
     </div>
-    <div class="copyright">
-      <p>2023 Fuchsjobs. Made with 🦊 in Berlin & UK</p>
+    <hr />
+    <div>
+      <p class="copyright">2023 Fuchsjobs. Made with 🦊 in Berlin & UK</p>
     </div>
   </body>
 </html>
