--- a/index.html
+++ b/index.html
@@ -10,49 +10,201 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+
     <title>Footer</title>
   </head>
   <body>
     <div class="flex-container">
       <div class="box-1">
-        <h3>Fuchsjobs.de</h3>
-        <p>
-          Finde einen Job, der genau zu Dir passt. Oder finden Sie qualifizierte
-          Talente für Ihr Unternehmen.
-        </p>
-        <p>Phone: (+49) 30 754 79 856 📞</p>
-        <p>Email: info@fuchsjobs.de @</p>
+        <div class="inner-box-1">
+          <svg
+            id="svg-logo"
+            xmlns="http://www.w3.org/2000/svg"
+            id="Ebene_18"
+            viewBox="0 0 2200.28 1341.38"
+          >
+            <defs>
+              <style>
+                .cls-1,
+                .cls-2 {
+                  fill: #fff;
+                }
+                .cls-1,
+                .cls-3,
+                .cls-4 {
+                  stroke-width: 0px;
+                }
+                .cls-2 {
+                  font-family: Inter-Black, Inter;
+                  font-size: 282.95px;
+                  font-variation-settings: "wght" 900, "slnt" 0;
+                  font-weight: 800;
+                }
+                .cls-3 {
+                  fill: #e8431e;
+                }
+                .cls-4 {
+                  fill: #1d1d1b;
+                }
+              </style>
+            </defs>
+            <path
+              class="cls-1"
+              d="m1324.93,404.96c46.55,51.59,78.04,106.67,73,172.4-1,13.02-1.9,26.22-5.91,38.75-14.41,44.99-43.76,71.33-56.36,83.89-17.82,17.74-16.28-72.08-60.16-28.04l-73.47,97.5c-61.83,80.99-93.39,60.01-121.54,53.54-3.7-.85-7.32-1.44-10.94-1.52-.82-.03-1.64-.03-2.47,0-3.62.08-7.24.67-10.94,1.52-28.14,6.47-59.7,27.45-121.54-53.54l-73.47-97.5c-43.88-44.04-42.34,45.78-60.16,28.04-12.61-12.56-41.96-38.9-56.36-83.89-4.03-12.53-4.93-25.73-5.91-38.75-5.03-65.74,26.42-120.82,72.98-172.4-32.33-27.81-58.21-46.3-82.38-89.59,0,0-23.24-43.29-13.87-102.38,5.52-34.72,18.41-60.83,31.07-60.88,35.26-.15,116.04,34.59,168.84,86.46,5.21,5.14,24.63-3.18-7.88-37.9-1.16-3.08,45.22-.77,102.69,54.64,0,0,33.43-11.38,58.16-7.19,24.73-4.19,58.16,7.19,58.16,7.19,57.47-55.41,103.82-57.72,102.69-54.64-32.51,34.72-13.1,43.04-7.88,37.9,52.79-51.87,133.58-86.61,168.84-86.46,12.66.05,25.55,26.17,31.07,60.88,9.37,59.09-13.87,102.38-13.87,102.38-24.19,43.29-50.05,61.78-82.4,89.59Z"
+            />
+            <path
+              class="cls-3"
+              d="m1074.27,813.91c-3.9.17-7.86.98-11.88,2.62v-.98c4.01-.92,7.95-1.56,11.88-1.64Z"
+            />
+            <path
+              class="cls-3"
+              d="m1074.27,815.55v.98c-4.01-1.64-7.97-2.45-11.88-2.62,3.93.08,7.86.72,11.88,1.64Z"
+            />
+            <path
+              class="cls-4"
+              d="m1347.02,493.77c-1.59-7.25-5.88-10.04-15.92-9.59-9.98.45-38.05,4.01-53.47,4.68-15.42.61-161.3,5.44-161.3,5.44,0,0-10.06-1.42-15.83,4.15-5.02,4.79-6.91,7.11-12.27,8.11-4.93.06-30.22.31-37.05-.39-7.56-.72-9.2-2.96-15.03-8.48-5.77-5.58-15.81-4.15-15.81-4.15,0,0-145.92-4.82-161.3-5.46-15.42-.64-43.49-4.21-53.5-4.66-10.01-.45-14.3,2.34-15.89,9.59-1.59,7.28,6.77,13.49,8.64,14.69,1.84,1.2,16.11,2.54,18.34,27.18,2.23,24.64,16.81,106.44,118.2,102.76,101.39-3.65,110.29-93.56,110.29-93.56,0,0,.11-11.15,10.37-21.02,2.7-2.59,6.36-4.15,10.32-5.02,5.74.5,11.51,2.09,15.33,5.77,10.26,9.87,10.37,21.02,10.37,21.02,0,0,8.92,89.94,110.29,93.56,101.42,3.68,115.97-78.12,118.23-102.76,2.23-24.64,16.48-25.98,18.34-27.18,1.84-1.2,10.23-7.42,8.64-14.69Zm-327.04,76.08c-12.55,31.25-36.91,39.03-44.22,42.71-7.33,3.71-63.06,25.51-105.55-11.1-42.49-36.58-31.34-86.03-29.19-91.47,2.17-5.44,16.39-3.79,16.39-3.79l161.03,5.41c12.94,11.07,8.25,41.43,1.53,58.24Zm246.47,32.37c-42.51,36.6-98.24,14.8-105.58,11.12-7.28-3.71-31.64-11.49-44.19-42.74-6.72-16.81-11.4-47.17,1.51-58.24l161.05-5.41s14.19-1.62,16.36,3.79c2.15,5.44,13.33,54.89-29.16,91.47Z"
+            />
+            <path
+              class="cls-4"
+              d="m1069.01,731.83c34.2,0,80.75,10.37,61.91,45.43-16.25,30.25-34.52,53.65-62.74,38.35-28.05,15-46.23-8.38-62.43-38.52-18.84-35.06,27.71-45.43,61.89-45.43l1.37.17Z"
+            />
+            <text class="cls-2" transform="translate(157.28 1145.26)">
+              <tspan x="0" y="0">FUCHSJOBS</tspan>
+            </text>
+            <circle class="cls-1" cx="2004.31" cy="1088.35" r="57.07" />
+          </svg>
+          <h3>Fuchsjobs.de</h3>
+          <p>
+            Finde einen Job, der genau zu Dir passt. Oder finden Sie
+            qualifizierte Talente für Ihr Unternehmen.
+          </p>
+          <p>
+            <a class="contact-link" href="tel:(00)723445793">
+              Phone: (+49) 30 754 79 856
+              <span class="">
+                <img
+                  class="emoji"
+                  draggable="false"
+                  role="img"
+                  class="emoji"
+                  alt="📞"
+                  src="https://s.w.org/images/core/emoji/14.0.0/svg/1f4de.svg"
+                /> </span
+            ></a>
+          </p>
+          <p>
+            <a class="contact-link" href="mailto:info@fuchsjobs.de"
+              >Email: info@fuchsjobs.de <span class="emoji"> @ </span></a
+            >
+          </p>
+        </div>
       </div>
-      <div>
-        <h3>Unternehmen</h3>
-        <p><a href="#">Über Fuchsjobs</a></p>
-        <p><a href="#">Häufige Fragen</a></p>
-        <p><a href="#">Kontakt</a></p>
-        <p>Phone: (+49) 30 754 79 856 📞</p>
+      <div class="box-2">
+        <div class="inner-box-2">
+          <h3>Unternehmen</h3>
+          <p><a href="#">Über Fuchsjobs</a></p>
+          <p><a href="#">Häufige Fragen</a></p>
+          <p><a href="#">Kontakt</a></p>
+        </div>
       </div>
-      <div>
-        <h3>Arbeitnehmer</h3>
-        <p><a href="#">Für Jobsuchende</a></p>
-        <p><a href="#">Übersicht Jobs</a></p>
-        <p><a href="#">Blog</a></p>
+      <div class="box-2">
+        <div class="inner-box-2">
+          <h3>Arbeitnehmer</h3>
+          <p><a href="#">Für Jobsuchende</a></p>
+          <p><a href="#">Übersicht Jobs</a></p>
+          <p><a href="#">Blog</a></p>
+        </div>
       </div>
-      <div>
-        <h3>Arbeitgeber</h3>
-        <p><a href="#">Für Arbeitgeber</a></p>
-        <p><a href="#">Job posten</a></p>
-        <p><a href="#">Preise</a></p>
+      <div class="box-2">
+        <div class="inner-box-2">
+          <h3>Arbeitgeber</h3>
+          <p><a href="#">Für Arbeitgeber</a></p>
+          <p><a href="#">Job posten</a></p>
+          <p><a href="#">Preise</a></p>
+        </div>
       </div>
-      <div>
-        <h3>Social</h3>
-        <p><a href="#">Facebook</a></p>
-        <p><a href="#">Instagram</a></p>
-        <p><a href="#">LinkedIn</a></p>
-        <p><a href="#">Youtube</a></p>
-        <h3>Rechtliches</h3>
-        <p><a href="#">Datenschutz</a></p>
-        <p><a href="#">Impressum</a></p>
+      <div class="box-2">
+        <div>
+          <h3>Social</h3>
+          <p>
+            <a href="https://www.facebook.com/fuchsjobs/"
+              ><span
+                ><svg
+                  class="social-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="16"
+                  width="10"
+                  viewBox="0 0 320 512"
+                >
+                  <!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                  <path
+                    fill="#ffffff"
+                    d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"
+                  /></svg></span
+              >Facebook</a
+            >
+          </p>
+          <p>
+            <a href="https://www.instagram.com/fuchsjobs/"
+              ><span
+                ><svg
+                  class="social-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="16"
+                  width="14"
+                  viewBox="0 0 448 512"
+                >
+                  <!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                  <path
+                    fill="#ffffff"
+                    d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
+                  /></svg></span
+              >Instagram</a
+            >
+          </p>
+          <p>
+            <a href="https://www.linkedin.com/company/fuchsjobs/"
+              ><span
+                ><svg
+                  class="social-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="16"
+                  width="14"
+                  viewBox="0 0 448 512"
+                >
+                  <!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                  <path
+                    fill="#ffffff"
+                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+                  /></svg></span
+              >LinkedIn</a
+            >
+          </p>
+          <p>
+            <a href="https://www.youtube.com/@fuchsjobs"
+              ><span
+                ><svg
+                  class="social-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                  height="16"
+                  width="18"
+                  viewBox="0 0 576 512"
+                >
+                  <!--!Font Awesome Free 6.5.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.-->
+                  <path
+                    fill="#ffffff"
+                    d="M549.7 124.1c-6.3-23.7-24.8-42.3-48.3-48.6C458.8 64 288 64 288 64S117.2 64 74.6 75.5c-23.5 6.3-42 24.9-48.3 48.6-11.4 42.9-11.4 132.3-11.4 132.3s0 89.4 11.4 132.3c6.3 23.7 24.8 41.5 48.3 47.8C117.2 448 288 448 288 448s170.8 0 213.4-11.5c23.5-6.3 42-24.2 48.3-47.8 11.4-42.9 11.4-132.3 11.4-132.3s0-89.4-11.4-132.3zm-317.5 213.5V175.2l142.7 81.2-142.7 81.2z"
+                  /></svg></span
+              >Youtube</a
+            >
+          </p>
+          <h3>Rechtliches</h3>
+          <p><a href="#">Datenschutz</a></p>
+          <p><a href="#">Impressum</a></p>
+        </div>
       </div>
     </div>
+
     <hr />
     <div>
       <p class="copyright">2023 Fuchsjobs. Made with 🦊 in Berlin & UK</p>
